Move opengl-related stuff into separate modules; make jlink-compatible